@@ -1,7 +1,8 @@
 Next Release
 ------------
 
-- ...
+- Fixed another minor compatibility issue with PostgreSQL 9.0.  Packing
+  raised an error when the client used old an version of libpq.
 
 1.5.0b2 (2011-03-02)
 --------------------
